# python-directory-json

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  requirements.txt  sandbox.py
docs/: EBNF_document.md  README_JP.md  coding_rule.md  formal_document.md  formal_document_JP.md
src/: directory_json.py  main.py  tree_json.py
tests/: expected.yaml  output.json  test_dirjson.py
