[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "treejson-cli"
version = "0.0.1"
authors = [
  { name="masaniki", email="masaniki.software@gmail.com" },
]
description = "It shows the nested directory structure in JSON or YAML."
dependencies = [PyYAML]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENCSE.txt"]

[project.script]
treejson = src/main:mainCLI

[project.urls]
Document = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"